Fix fontawesome vertical align

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,7 @@
   width: 1em !important;
   height: 1em !important;
   margin: 0 0.05em !important;
-  vertical-align: -0.1em;
+  vertical-align: -10%;
   display: inline-block !important;
   padding: 0 !important;
   font-size: inherit;
