--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,7 +32,7 @@ $table-text-align: left !default;
 
 // Heading
 $head-font-family: $base-font-family;
-$code-font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace !default;
+$code-font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 $title-font-family: $base-font-family;
 $meta-font-family: $base-font-family !default;
 $bq-font-family: $base-font-family;
